# harness

./: pyproject.toml
docs/: agent-harness-layered-build-guide.md
docs/harness/: README.md  apply_harness_folder.md  development_rules.md  roadmap.md
docs/local_llm/: README.md
harness/: README.md  manifest.json  read_file_and_list.py  release.json
harness/afk/: afk-run.sh  afk_output_parser.py  gate_live_probe.py  loop_controller.py  preflight.py
harness/data/: agent-permissions.yaml  ccstatusline-default.json  components.yaml  cook.yaml  critique.yaml  decomposition-map.yaml  decomposition-rename-map.json  guard-policy.yaml  observation-signals.yaml  output.yaml  ownership.yaml  route-probes.yaml  skill-chains.yaml  stage-policy.yaml  team.yaml  terminal-voice.yaml  work-ownership.yaml
harness/e2e/: run_afk_slice.py  run_native_slice.py  run_vertical_slice.py
harness/hooks/: agent_rbac_guard.py  bash_safety_guard.py  bash_write_guard.py  cook_isolation_nudge.py  decision_capture_nudge.py  descriptive_name.py  disabled_ref_nudge.py  discover_isolation_nudge.py  emit_session_summary.py  gate_stage.py  harness-hooks.yaml  hook_runtime.py  inject_prompt_context.py  memory_gap_hook.py  nudge_context_inject.py  ownership_guard.py  privacy_read_guard.py  protected_ref_guard.py  secret_scan_before_ship.py  session_init.py  setup_nudge.py  simplify_gate.py  subagent_init.py  trace_log.py  track_skill_invocation.py  voice_inject.py  write_guard.py
harness/install/: _hooks.py  _prompts.py  _settings.py  git-pre-push-hook.sh  hooks-registration.yaml  install.py
(+659 files in other folders)
