[project]
name = "harness-practice"
version = "0.1.0"
description = "Practice implementation of an agent harness core."
requires-python = ">=3.12"

[project.scripts]
harness-code-index-mcp = "harness.entrypoints.code_index_mcp_server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
